agregadas algunas dependencias, y randoms

--- a/apps/authentication/views/login.jade
+++ b/apps/authentication/views/login.jade
@@ -1,8 +1,10 @@
-form(action='/sessions',method='post')
-	label
-		| Usuario
-		input(type='text', name='user')
-	label
-		| Contraseña
-		input(type='password', name='password')
-	input(type='submit', name='submit')
+extends ../../../views/layout
+block content
+	form(action='/sessions',method='post')
+		label
+			| Usuario
+			input(type='text', name='user')
+		label
+			| Contraseña
+			input(type='password', name='password')
+		input(type='submit', name='submit')
